@@ -1,129 +1,0 @@
-#
-# $Id$
-#
-# QS_UserTrackingCookieName     _ckUTP /errorpages/cookie-ir.shtml passive
-#
-
-INCLUDE scripts/ports
-
-CLIENT
-_EXEC ./ctl.sh restart -D usertrack_force_passive -D debug 2>/dev/null 1>/dev/null
-
-# HTTP -------------------------
-_REQ 127.0.0.1 $QS_PORT_BASE
-__GET /index.html?test HTTP/1.1
-__Host: 127.0.0.1:${QS_PORT_BASE}
-__User-Agent: 070_QS_UserTrackingCookieName.htt 1
-__
-_MATCH headers "Location: http://127.0.0.1:${QS_PORT_BASE}/errorpages/cookie-ir.shtml\?r=(.*)" Q
-_EXPECT . "Location: http://127.0.0.1:${QS_PORT_BASE}/errorpages/cookie-ir.shtml\?r="
-_EXPECT . "302"
-_EXPECT . "!Set-Cookie"
-_WAIT
-_CLOSE
-
-_REQ 127.0.0.1 $QS_PORT_BASE
-__GET /errorpages/cookie-ir.shtml?r=${Q} HTTP/1.1
-__Host: 127.0.0.1:${QS_PORT_BASE}
-__User-Agent: 070_QS_UserTrackingCookieName.htt 2
-__
-_EXPECT . "window.location = \"/index.html\?test"
-_EXPECT . "<a href=\"/index.html\?test\">here ...</a>"
-_EXPECT . "link = \"\?setCookie.txt\";"
-_EXPECT . "!Set-Cookie"
-_WAIT
-_CLOSE
-
-_REQ 127.0.0.1 $QS_PORT_BASE
-__GET /errorpages/cookie-ir.shtml?setCookie.txt HTTP/1.1
-__Host: 127.0.0.1:${QS_PORT_BASE}
-__User-Agent: 070_QS_UserTrackingCookieName.htt 3
-__
-_MATCH headers "Set-Cookie: _ckUTP=(.*); Path=/" UCA
-_EXPECT . "Cache-Control: no-cache, no-store, private"
-_EXPECT . "!302"
-_WAIT
-_CLOSE
-
-_REQ 127.0.0.1 $QS_PORT_BASE
-__GET /index.html?test HTTP/1.1
-__Host: 127.0.0.1:${QS_PORT_BASE}
-__User-Agent: 070_QS_UserTrackingCookieName.htt 4
-__Cookie: _ckUTP=${UCA}
-__
-_EXPECT . "this is the root index.html"
-_WAIT
-_CLOSE
-
-#
-## wrong (radnom) key
-#_REQ 127.0.0.1 $QS_PORT_BASE
-#__GET /static.html HTTP/1.1
-#__Host: 127.0.0.1:${QS_PORT_BASE}
-#__User-Agent: 070_QS_UserTrackingCookieName.htt h4
-#__Cookie: _ckUT=v8UdFg1Q4674fL8XgcAnizR7z4LP5tJI09GS9Sx/BgxRYpNmx9vYAG3yfmFHywxx9ns6Eu66P6vLhFzs5RHjMg==
-#__
-#_EXPECT . "!<title>Static Page</title>"
-#_EXPECT . "302"
-#_EXPECT . "/errorpages/cookie.html"
-#_EXPECT . "Set-Cookie"
-#_WAIT
-#_CLOSE
-#_SLEEP 100
-#_EXPECT EXEC "mod_qos.c\([0-9]+\): .* mod_qos\(\): qos_decrypt\(\) decryption operation failed, id="
-#_EXEC tail -1 logs/error_log
-#
-## HTTPS ------------------------
-#_REQ 127.0.0.1 SSL:$QS_PORT_BASE2
-#__GET /index.html HTTP/1.1
-#__Host: 127.0.0.1:${QS_PORT_BASE2}
-#__User-Agent: 070_QS_UserTrackingCookieName.htt s1
-#__
-#_MATCH headers "Set-Cookie: _ckUT=(.*); Path=/" UCB
-#_MATCH headers "Location: https://127.0.0.1:${QS_PORT_BASE2}/errorpages/cookie.html\?r=(.*)" Q
-#_EXPECT . "Location: https://127.0.0.1:${QS_PORT_BASE2}/errorpages/cookie.html"
-#_EXPECT . "302"
-#_WAIT
-#_CLOSE
-#
-#_REQ 127.0.0.1 SSL:$QS_PORT_BASE2
-#__GET /errorpages/cookie.html?r=${Q} HTTP/1.1
-#__Host: 127.0.0.1:${QS_PORT_BASE2}
-#__User-Agent: 070_QS_UserTrackingCookieName.htt s2
-#__Cookie: _ckUT=${UCB}
-#__
-#_EXPECT . "Location: https://127.0.0.1:${QS_PORT_BASE2}/index.html"
-#_EXPECT . "302"
-#_WAIT
-#_CLOSE
-#
-#_REQ 127.0.0.1 SSL:$QS_PORT_BASE2
-#__GET /static.html HTTP/1.1
-#__Host: 127.0.0.1:${QS_PORT_BASE2}
-#__User-Agent: 070_QS_UserTrackingCookieName.htt s3
-#__Cookie: _ckUT=${UCB}
-#__
-#_EXPECT . "<title>Static Page</title>"
-#_EXPECT . "!302"
-#_WAIT
-#_CLOSE
-#
-## HTTP/2 -----------------------
-#_EXPECT EXEC "302 Found"
-#_EXPECT EXEC "location:https://127.0.0.1:${QS_PORT_BASE2}/errorpages/cookie.html"
-#_MATCH EXEC "set-cookie:_ckUT=(.*); Path=/" UCC
-#_MATCH EXEC "location:https://127.0.0.1:${QS_PORT_BASE2}/errorpages/cookie.html\?r=([0-9a-zA-Z+=/-]*)" Q
-#_EXEC ./bin/curl -v --http2 --insecure https://127.0.0.1:${QS_PORT_BASE2}/static.html 2>&1
-#
-#_EXPECT EXEC "302 Found"
-#_EXPECT EXEC "location:https://127.0.0.1:${QS_PORT_BASE2}/static.html"
-#_EXEC ./bin/curl -v --http2 --cookie "_ckUT=${UCC}" --insecure https://127.0.0.1:${QS_PORT_BASE2}/errorpages/cookie.html?r=${Q} 2>&1
-#
-#_EXPECT EXEC "<title>Static Page</title>"
-#_EXEC ./bin/curl -v --http2 --cookie "_ckUT=${UCC}" --insecure https://127.0.0.1:${QS_PORT_BASE2}/static.html 2>&1
-
-END
-
-BLOCK FINALLY
-_EXEC ./ctl.sh restart -D h2 2>/dev/null 1>/dev/null
-END
